Open1B.txt
❯ ./run Open1B
Open1B.java:6: error: variable same is already defined in class Test
    String same;
           ^
Open1B.java:11: error: incompatible types: String cannot be converted to int
        this.same = same2;
                    ^
Open1B.java:23: error: incompatible types: int cannot be converted to String
    String the = testing.same;
                        ^
3 errors